Added grunt, some JS modules and animation stuff..

--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,11 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/* ================== ANIMATION ================== */
+.js-animate-hero-in, .js-animate-devices-in {
+    opacity: 0;
+}
+
 /* ================== HERO ================== */
 .hero{
     position: relative;
